[tool.poetry]
name = "langchain-simple-llm-python"
version = "0.1.0"
description = ""
authors = ["Yohei <y.meguro.2008@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
langchain-openai = "^0.2.6"
langchain = "^0.3.7"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
