[tool.poetry]
name = "langchain-tutorials"
version = "0.1.0"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.7"
python-dotenv = "^1.0.1"
langchain = "^0.3.7"
langchain-openai = "^0.2.6"
langserve = {extras = ["all"], version = "^0.3.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
